--- a/MarketingAI.ipynb
+++ b/MarketingAI.ipynb
@@ -66,12 +66,12 @@
       "metadata": {
         "id": "1ZVLDgRNHb0T",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d3e81e49-0cae-4a7c-ba8a-603eb50abb58"
       },
       "source": [
-        "# Mount the drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -92,9 +92,7 @@
         "id": "E5m114pqHYt3"
       },
       "source": [
-        "sales_df = pd.read_csv('/content/drive/My Drive/Colab Notebooks/MarketingAI/sales_data_sample.csv', encoding = 'unicode_escape')\n",
-        "# Note: MSRP is the manufacturer's suggested retail price (MSRP) or sticker price represents the suggested retail price of products.\n",
-        "# MSRP is used to standardize the price of products over multiple company store locations."
+        "sales_df = pd.read_csv('/content/drive/My Drive/Colab Notebooks/MarketingAI/sales_data_sample.csv', encoding = 'unicode_escape')\n"
       ],
       "execution_count": 3,
       "outputs": []
@@ -761,7 +759,8 @@
       "metadata": {
         "id": "aqbEC-_wH-3w",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "c8ba0ddd-4441-434f-e6a3-8d44cec654c0"
       },
@@ -813,7 +812,8 @@
       "metadata": {
         "id": "3OqZHku_kte7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "8efe9b96-0480-4b64-ad41-7cfc74df8f4d"
       },
@@ -866,7 +866,8 @@
       "metadata": {
         "id": "jeWktbLylF9S",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "9484aa7e-de1d-4e16-b47d-aa3bfb8439c0"
       },
@@ -965,10 +966,6 @@
         "outputId": "56fef982-dd2b-437b-d769-e758310b29cd"
       },
       "source": [
-        "# since there are lot of Null values in 'addressline2', 'state', 'postal code' and 'territory' we can drop them.\n",
-        "# Country would represent the order grographical information.\n",
-        "# Also we can drop city, address1, phone number, contact_name, contact last_name and contact first_name since they are not required for the analysis\n",
-        "\n",
         "df_drop  = ['ADDRESSLINE1', 'ADDRESSLINE2', 'POSTALCODE', 'CITY', 'TERRITORY', 'PHONE', 'STATE', 'CONTACTFIRSTNAME', 'CONTACTLASTNAME', 'CUSTOMERNAME', 'ORDERNUMBER']\n",
         "sales_df = sales_df.drop(df_drop, axis = 1)\n",
         "sales_df.head()"
@@ -9605,7 +9602,8 @@
       "metadata": {
         "id": "t5dIoUr2lmVW",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "42c46e1e-804c-43ff-95ec-24e0c90d26dd"
       },
@@ -9645,7 +9643,8 @@
       "metadata": {
         "id": "Cj3Zofi_luXO",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d288668f-58a5-4d56-f1fe-981d6e7318b9"
       },
@@ -9695,7 +9694,8 @@
       "metadata": {
         "id": "zuNZ7DVddv7V",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b8c768c9-05b2-4162-e10d-e96638abc9fa"
       },
@@ -9724,7 +9724,8 @@
       "metadata": {
         "id": "3vH4KsjQdy-C",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "658146a0-ae53-4380-c3fc-7082e60b7db3"
       },
@@ -12533,7 +12534,8 @@
       "metadata": {
         "id": "-Olt8VjKqz72",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "f62d9b09-113f-4ff7-ce33-42002dfea680"
       },
@@ -12563,7 +12565,8 @@
       "metadata": {
         "id": "V6t7uGpBhEZl",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "adc40b8f-4f60-4954-f8e2-f381f67105e9"
       },
@@ -14002,7 +14005,8 @@
       "metadata": {
         "id": "_-sLgCWI6hta",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "730c8e09-ba24-46f1-8f79-565be599eabd"
       },
@@ -14069,7 +14073,8 @@
       "metadata": {
         "id": "T1iBuvxt2LVU",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d1ebc2ca-9d16-41da-87cc-c514dc7c56ef"
       },
@@ -14098,7 +14103,7 @@
         "id": "YpVz8iiD7ZKB",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 3709
         },
         "outputId": "99a026d0-5fe5-4df8-ad96-4bca85a579d0"
       },
@@ -14406,7 +14411,7 @@
         "id": "pUHlw-tn7n6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1134
         },
         "outputId": "5ab8f998-07b8-48e7-ca6f-239f47a54354"
       },
@@ -14515,7 +14520,8 @@
       "metadata": {
         "id": "CqRTQ9SQCYx7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "e2b68dc6-864a-44b9-86f0-cc197d2fa731"
       },
@@ -14542,7 +14548,7 @@
         "id": "8THwglMLCZjb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1337
         },
         "outputId": "3067a8ed-6843-44fe-ae7b-8e111d8e5f60"
       },
@@ -14653,7 +14659,8 @@
       "metadata": {
         "id": "XOGuIZu9CZmS",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "eeb73914-5d2c-40f4-9ab5-03aa8e39082b"
       },
@@ -14682,7 +14689,8 @@
       "metadata": {
         "id": "a3Tf4YDPDmtu",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b4127230-3a43-4351-c9f8-b13b34524b44"
       },
@@ -14708,7 +14716,8 @@
       "metadata": {
         "id": "lZcCzsRdDp-d",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "2bbda7c2-e957-4122-c394-1c8fce816ca7"
       },
@@ -15731,7 +15740,8 @@
       "metadata": {
         "id": "LBQlxRqtGGzZ",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "6e328266-441e-462f-f5c8-39a65f9c2448"
       },
@@ -15764,7 +15774,8 @@
       "metadata": {
         "id": "rOtFdNODGIS-",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "e9f96749-d57b-495a-e61a-a48f463b2d6e"
       },
@@ -15790,7 +15801,8 @@
       "metadata": {
         "id": "6hH8HwBSGIXl",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "5bde7e39-7a07-465f-ca9c-db081cd65a4a"
       },
@@ -15816,7 +15828,8 @@
       "metadata": {
         "id": "S9K8MOPxGIV2",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "35d23077-d2a8-424a-ded3-bda6cf279768"
       },
@@ -15853,7 +15866,8 @@
       "metadata": {
         "id": "2-z38LTkxhGg",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "39e4b51d-f616-41ad-91b5-c8e1fa82c68e"
       },
@@ -16642,7 +16656,8 @@
       "metadata": {
         "id": "cNwNJ5ntGfDD",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "c19fa265-275e-4009-a196-a9c02bdb7a61"
       },
@@ -17405,7 +17420,8 @@
       "metadata": {
         "id": "0XxHCSjkKtT7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "d9b41a0d-736d-4c6d-c66c-f92e359fca9e"
       },
@@ -17458,7 +17474,8 @@
       "metadata": {
         "id": "h0xVTDWWKtrQ",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "0e37a9fd-d7b4-440d-b0c1-fc51c01dbadd"
       },
@@ -18251,7 +18268,8 @@
       "metadata": {
         "id": "BYXIb_XPKtpf",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "f5130703-0d1c-42a9-e2d9-06c055b3a39b"
       },
@@ -18275,7 +18293,7 @@
         "id": "SYcSZAkbK1iK",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1346
         },
         "outputId": "4b896013-edbd-48ab-aa68-c8246c3e9f52"
       },
@@ -18376,7 +18394,8 @@
       "metadata": {
         "id": "D_ORufjBK1oc",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "b2f5aab4-68ee-4040-ea84-5eed65608433"
       },
